src/job-outs/WZVtilde_sigma_K_0.04_sigma_Z_0.0141_sigma_V_0.0_sigma_Vtilde_0.1/chiUnderline_1.0_a_e_0.15_a_h_0.05_gamma_e_1.0_gamma_h_3.0_psi_e_1.0_psi_h_1.0/trial_6_XiE_layers_3_XiH_layers_3_kappa_layers_3_points_size_2_iter_num_15/run.err
  File "standard_BFGS.py", line 176
    axfun, gtol = BFGS_gtol, maxcor = BFGS_maxcor, maxls = BFGS_maxls, ftol = BFGS_ftol)
    ^
SyntaxError: invalid syntax
